<resources>
    <string name="app_name">Cook Master</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="emailNotValid">Email is not valid</string>
    <string name="checkConnection">Check your connection</string>
    <string name="fillRequiredFields">Please fill in all the required fields correctly before proceeding.</string>
    <string name="usernameNotValid">Username must be between 4 and 24 characters</string>
    <string name="vegan">Vegan</string>
    <string name="headerInfo">What do you want to eat today?</string>
    <string name="recent_recipes">Recent recipes</string>
    <string name="hello">Hello</string>
    <string name="version">Version</string>
    <string name="recipe">Recipe</string>
    <string name="search">Search</string>
    <string name="lucky">Lucky</string>
    <string name="favorite">Favorite</string>
    <string name="meal_types">Meal Types</string>
    <string name="diets_type">Diet Type</string>
    <string name="submit">SUBMIT</string>
    <string name="showMore">Show more</string>
    <string name="cheap">Cheap</string>
    <string name="popular">Popular</string>
    <string name="dairyFree">Dairy free</string>
    <string name="instructions">Instructions</string>
    <string name="steps">Steps</string>
    <string name="diets">Diets</string>
    <string name="similarRecipes">Similar recipes</string>
    <string name="items">Items</string>
    <string name="source">Source</string>
    <string name="check_your_connection">Check your connection</string>
    <string name="add_new_recipe_to_favorite">Add new recipe to favorite</string>
    <string name="emptyList">Not found any item !</string>
    <string name="password">Password</string>
    <string name="passwordTooShort">The password is short (at least 8 characters).</string>
    <string name="firstNameNotValid">The name is short or starts with a special character.</string>
    <string name="lastNameNotValid">The last name is short or starts with a special character.</string>
    <string name="login">Login</string>
    <string name="don_t_have_a_account_register">Don\'t have a Account? Register</string>
    <string name="already_a_member_sing_in">Already A Member? Login</string>
    <string name="cuisine_type">Cuisine Type</string>
    <string name="sorting">Sorting</string>
    <string name="maximum_time_to_ready">Time to ready</string>
    <string name="retry">Retry</string>
    <string name="profile">PROFILE</string>
    <string name="edite_information">Edite Information</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="personal">Personal</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="security">Security</string>
    <string name="usernameContainsSpace">Username cannot contain spaces.</string>
    <string name="firstNameSpacesAtStartEnd">First name cannot start or end with a space.</string>
    <string name="firstNameContainsSpecialChars">First name cannot contain special characters.</string>
    <string name="firstNameInvalidChars">Invalid characters in first name.</string>
    <string name="firstNameInvalidLength">First name should be between 2 and 50 characters.</string>
    <string name="firstNameEmpty">First name cannot be empty.</string>
    <string name="lastNameEmpty">Last name cannot be empty.</string>
    <string name="lastNameInvalidLength">Last name should be between 2 and 50 characters.</string>
    <string name="lastNameInvalidChars">Invalid characters in last name.</string>
    <string name="lastNameContainsSpecialChars">Last name cannot contain special characters.</string>
    <string name="lastNameSpacesAtStartEnd">Last name cannot start or end with a space.</string>
    <string name="usernameEmpty">Username cannot be empty.</string>



</resources>