<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15mdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.edite.EditeInformationFragment">

    <TextView
        android:id="@+id/personalTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal"
        app:fontPath="fonts/atlas_bold.ttf"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/_12mdp"
        android:textStyle="bold"/>

    <!--Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTxtLay"
        style="@style/DarkGreenTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        app:layout_constraintTop_toBottomOf="@+id/personalTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_round_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--LastName-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameTxtLay"
        style="@style/DarkGreenTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTxtLay"
        app:startIconDrawable="@drawable/ic_round_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Username-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTxtLay"
        style="@style/DarkGreenTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameTxtLay"
        app:startIconDrawable="@drawable/ic_round_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35mdp"
        android:layout_marginBottom="@dimen/_15mdp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        app:backgroundTint="@color/yellowOrange"
        app:cornerRadius="@dimen/_8mdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTxtLay" />

</androidx.constraintlayout.widget.ConstraintLayout>