<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <!--bg-->
    <ImageView
        android:id="@+id/bgImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        tools:src="@drawable/login_bg" />

    <!--Container-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20font_mdp"
        android:layout_marginTop="@dimen/_100mdp"
        android:background="@drawable/bg_rounded_white_login"
        android:elevation="@dimen/_90mdp"
        android:orientation="vertical"
        android:padding="@dimen/_15mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/darkGreen"
            android:textSize="@dimen/_40font_mdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--Username-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTxtLay"
            style="@style/DarkGreenTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25mdp"

            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTxt"
            app:startIconDrawable="@drawable/ic_round_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTxtLay"
            style="@style/DarkGreenTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameTxtLay"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdt"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitBtn"
            style="@style/DarkGreenMaterialButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45mdp"
            android:layout_marginTop="@dimen/_25mdp"
            android:text="@string/submit"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTxtLay" />

        <TextView
            android:id="@+id/Sing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15mdp"
            android:text="@string/don_t_have_a_account_register"
            android:textColor="@color/darkGreen"
            android:textSize="@dimen/_10font_mdp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submitBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>