<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.menu.LuckyMenuFragment">
    <!--Cuisine type-->
    <TextView
        android:id="@+id/cuisineTypeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10mdp"
        android:text="@string/cuisine_type"
        app:fontPath="fonts/atlas_bold.ttf"
        android:textColor="@color/jacarta"
        android:textSize="@dimen/_12font_mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--Cuisine chips-->
    <HorizontalScrollView
        android:id="@+id/cuisineChipsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1mdp"
        android:clipToPadding="false"
        android:fadingEdge="horizontal"
        android:requiresFadingEdge="horizontal"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/cuisineTypeTitle">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cuisineChipGroup"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_5mdp"
            app:singleLine="true"
            app:singleSelection="true" />
    </HorizontalScrollView>
    <!--Meal type-->
    <TextView
        android:id="@+id/mealTypeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:fontPath="fonts/atlas_bold.ttf"
        android:layout_marginTop="@dimen/_4mdp"
        android:text="@string/meal_types"
        android:textColor="@color/jacarta"
        android:textSize="@dimen/_12font_mdp"
        app:layout_constraintEnd_toEndOf="@id/cuisineTypeTitle"
        app:layout_constraintStart_toStartOf="@+id/cuisineTypeTitle"
        app:layout_constraintTop_toBottomOf="@+id/cuisineChipsScroll" />

    <HorizontalScrollView
        android:id="@+id/mealChipsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1mdp"
        android:clipToPadding="false"
        android:fadingEdge="horizontal"
        android:requiresFadingEdge="horizontal"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/mealTypeTitle">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/mealChipGroup"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_5mdp"
            app:singleLine="true"
            app:singleSelection="true" />
    </HorizontalScrollView>
    <!--sorting-->
    <TextView
        android:id="@+id/dietTypeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4mdp"
        android:text="@string/diets_type"
        app:fontPath="fonts/atlas_bold.ttf"

        android:textColor="@color/jacarta"
        android:textSize="@dimen/_12font_mdp"
        app:layout_constraintEnd_toEndOf="@id/mealTypeTitle"
        app:layout_constraintStart_toStartOf="@id/mealTypeTitle"
        app:layout_constraintTop_toBottomOf="@id/mealChipsScroll" />
    <!--Diets chips-->
    <HorizontalScrollView
        android:id="@+id/dietChipsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1mdp"
        android:clipToPadding="false"
        android:fadingEdge="horizontal"
        android:requiresFadingEdge="horizontal"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/dietTypeTitle">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/dietChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_5mdp"
            app:chipSpacing="0dp"
            app:singleLine="true"
            app:singleSelection="true" />
    </HorizontalScrollView>

    <!--Submit-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10mdp"
        android:layout_marginBottom="@dimen/_20mdp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginTop="@dimen/_15mdp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        app:backgroundTint="@color/yellowOrange"
        app:cornerRadius="@dimen/_8mdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dietChipsScroll"
        tools:layout_editor_absoluteX="-9dp" />


</androidx.constraintlayout.widget.ConstraintLayout>